# async-python-sprint-5

./: .db-env-example  .env  .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
nginx/configs/: site.conf
src/: Dockerfile  entrypoint.sh  main.py  requirements.txt
src/api/v1/: base.py  files.py  root.py  users.py
src/core/: compressors.py  config.py  enums.py  exceptions.py  utils.py
src/db/: __init__.py  base.py  models.py
src/migrations/: env.py
src/migrations/versions/: 39d15b0bc65f_01_init_db.py  6c6599c9957a_nullable_false_for_user_foreign_key.py  e41767c057c9_remove_updated_at_filed_from_file_model.py  f11749b6cbb0_init_db.py
src/repositories/: base.py  files.py  users.py
src/schemas/: files.py  users.py
src/services/: files.py  root.py  users.py
